2003-05-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* modules/base64/base64.test:      
	* modules/base64/uuencode.test:     
	* modules/base64/yencode.test:     Various fixes to fix the
	* modules/control/ChangeLog:       testsuite for tcl versions
	* modules/control/do.test:         from 8.2 to 8.5
	* modules/csv/csv.test:
	* modules/dns/dns.test:
	* modules/fileutil/ChangeLog:
	* modules/fileutil/fileutil.man:
	* modules/fileutil/fileutil.tcl:
	* modules/fileutil/fileutil.test:
	* modules/math/combinatorics.test:
	* modules/math/math.test:
	* modules/mime/mime.test:
	* modules/ntp/time.test:
	* modules/pop3/pop3.test:
	* modules/pop3d/pop3d.test:
	* modules/pop3d/pop3d_dbox.test:
	* modules/pop3d/pop3d_udb.test:
	* modules/profiler/profiler.test:
	* modules/report/report.test:
	* modules/stooop/pkgIndex.tcl:
	* modules/stooop/stooop.test:
	* modules/struct/list.test:
	* modules/textutil/ChangeLog:
	* modules/textutil/expander.tcl:
	* modules/textutil/split.tcl:

2003-04-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* installer.tcl:
	* installed_modules.tcl: Changed mechanism for exclusion so that
	  installer is able to install even the excluded (i.e. unofficial)
	  modules, if so chosen (cmdline only).

2003-04-30  Andreas Kupries  <andreask@activestate.com>

	* sak.tcl (gd-tip55): Bugfix, location of changeLog was not computed correctly.

	* README-1.4txt: New, overview of changes from 1.3 to 1.4.

	* installed_modules.tcl: Excluded 'calendar' form the list of
	  installed modules/packages. Not yet ready.

	* sak.tcl (ppackages): Rewritten to use a sub-interpreter for
	  retrieving package version information instead of regexes
	  etc.

	  Reverted all changes made to [package provide] commands on
	  2003-04-24, except for minor details, like the actual version
	  numbers and typos.

	 Fixes SF Tcllib FR #727694

2003-04-30  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sak.tcl: Various fixes to enable document generation under